tests/kiama/negative/name_errors/L1/4_selfref3.ob
MODULE selfref;
    
TYPE
    atype1 = atype1;

END selfref.
